infrastructure/headlamp/templates/headlamp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
  namespace: kube-system
spec:
  type: NodePort
  selector:
    app: headlamp
  ports:
  - port: 80
    targetPort: 80
