infrastructure/headlamp/templates/headlamp-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp-route
  namespace: kube-system
spec:
  parentRefs:
    - name: fitforge-gateway
      namespace: fitforge-prod
  hostnames:
    - headlamp.fitforge360.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headlamp
          port: 80
